--- a/index.html
+++ b/index.html
@@ -1,1 +1,181 @@
-<h1>Clinica Control</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clinica Control</title>
+    <!-- Google Fonts -->    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style>
+        body {
+            color: #fff;
+            background-color: #5d7486;
+            position: relative;
+        }
+        #header {
+            position: relative;
+            width: 100%;
+            padding: 100px 0;
+        }
+        #header h1 {
+            margin: 0 0 10px 0;
+            font-size: 48px;
+            font-weight: 700;
+            line-height: 56px;
+            color: #fff;
+        }
+        #header h2 {
+            color: #eee;
+            margin-bottom: 40px;
+            font-size: 22px;
+        }
+        h1, h2, h3, h4, h5, h6 {
+            font-family: 'Roboto Condensed', sans-serif;
+        }
+        #header .countdown div {
+            text-align: center;
+            border: 2px solid rgba(255, 255, 255, 0.8);
+            border-radius: 8px;
+            margin: 10px 10px;
+            width: 100px;
+            padding: 15px 0;
+        }
+        #header .countdown div h3 {
+            font-weight: 700;
+            font-size: 32px;
+            margin-bottom: 15px;
+        }
+        #header .countdown div h4 {
+            font-size: 16px;
+            font-weight: 600;
+        }
+</style>
+</head>
+<body>
+    <header id="header" class="d-flex align-items-center">
+    <div class="container d-flex flex-column align-items-center">
+
+      <h1>Clinica Control</h1>
+      <h2>Estamos trabajando arduamente para realizar nuestro sitio y estará listo para funcionar en:</h2>
+      <div class="countdown d-flex justify-content-center" data-count="2023/12/31">
+        <div>
+          <h3>%d</h3>
+          <h4>Days</h4>
+        </div>
+        <div>
+          <h3>%h</h3>
+          <h4>Hours</h4>
+        </div>
+        <div>
+          <h3>%m</h3>
+          <h4>Minutes</h4>
+        </div>
+        <div>
+          <h3>%s</h3>
+          <h4>Seconds</h4>
+        </div>
+      </div>
+
+      <!-- <div class="subscribe">
+        <h4>Subscribe now to get the latest updates!</h4>
+        <form action="forms/notify.php" method="post" role="form" class="php-email-form">
+          <div class="subscribe-form">
+            <input type="email" name="email" required=""><input type="submit" value="Subscribe">
+          </div>
+          <div class="mt-2">
+            <div class="loading">Loading</div>
+            <div class="error-message"></div>
+            <div class="sent-message">Your notification request was sent. Thank you!</div>
+          </div>
+        </form>
+      </div>
+
+      <div class="social-links text-center">
+        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      </div> -->
+
+    </div>
+  </header>
+    
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script>        
+        (function() {
+            "use strict";
+            /**
+            * Easy selector helper function
+            */            
+            const select = (el, all = false) => {
+                el = el.trim()
+                if (all) {
+                    return [...document.querySelectorAll(el)]
+                } else {
+                    return document.querySelector(el)
+                }
+            }
+
+            /**
+             * Easy event listener function
+             */
+            const on = (type, el, listener, all = false) => {
+                let selectEl = select(el, all)
+                if (selectEl) {
+                    if (all) {
+                        selectEl.forEach(e => e.addEventListener(type, listener))
+                    } else {
+                        selectEl.addEventListener(type, listener)
+                    }
+                }
+            }
+
+            /**
+             * Easy on scroll event listener 
+             */
+            const onscroll = (el, listener) => {
+                el.addEventListener('scroll', listener)
+            }
+
+            /**
+             * Back to top button
+             */
+            let backtotop = select('.back-to-top')
+            if (backtotop) {
+                const toggleBacktotop = () => {
+                    if (window.scrollY > 100) {
+                        backtotop.classList.add('active')
+                    } else {
+                        backtotop.classList.remove('active')
+                    }
+                }
+                window.addEventListener('load', toggleBacktotop)
+                onscroll(document, toggleBacktotop)
+            }
+
+            /**
+             * Countdown timer
+             */
+            let countdown = select('.countdown');
+            const output = countdown.innerHTML;
+
+            const countDownDate = function() {                
+                let timeleft = new Date(countdown.getAttribute('data-count')).getTime() - new Date().getTime();
+                //console.log(timeleft);
+                let days = Math.floor(timeleft / (1000 * 60 * 60 * 24));
+                let hours = Math.floor((timeleft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                let minutes = Math.floor((timeleft % (1000 * 60 * 60)) / (1000 * 60));
+                let seconds = Math.floor((timeleft % (1000 * 60)) / 1000);
+
+                countdown.innerHTML = output.replace('%d', days).replace('%h', hours).replace('%m', minutes).replace('%s', seconds);
+            }
+            countDownDate();
+            setInterval(countDownDate, 1000);
+        })();
+    </script>
+</body>
+</html>
+
