Ajuste de valores

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             text-align: center;
             border: 2px solid rgba(255, 255, 255, 0.8);
             border-radius: 8px;
-            margin: 10px 10px;
+            margin: 10px 3px;
             width: 100px;
             padding: 15px 0;
         }
@@ -57,24 +57,24 @@
     <header id="header" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center">
 
-      <h1>Clinica Control</h1>
+      <h1>Clínica Control</h1>
       <h2>Estamos trabajando arduamente para realizar nuestro sitio y estará listo para funcionar en:</h2>
       <div class="countdown d-flex justify-content-center" data-count="2023/12/31">
         <div>
           <h3>%d</h3>
-          <h4>Days</h4>
+          <h4>Dias</h4>
         </div>
         <div>
           <h3>%h</h3>
-          <h4>Hours</h4>
+          <h4>Horas</h4>
         </div>
         <div>
           <h3>%m</h3>
-          <h4>Minutes</h4>
+          <h4>Minutos</h4>
         </div>
         <div>
           <h3>%s</h3>
-          <h4>Seconds</h4>
+          <h4>Segundos</h4>
         </div>
       </div>
 
