--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         body {
             color: #fff;
@@ -51,33 +53,91 @@
             font-size: 16px;
             font-weight: 600;
         }
+        .icon {
+            position:absolute ;
+        }
+        .icon-box-75 {
+            height:72px;
+            width:72px;
+            line-height:36px;
+            border-color:rgba(255, 255, 255, 0.8);
+            border-width:2px;
+            border-style:solid;
+            margin-right:20px;
+            box-sizing:content-box;
+            border-radius:20px;
+            position: relative;
+            display: block;
+            text-align: center;
+        }
+        .icon-box-75 i {
+            border-color: #333333;
+            border-width: 0px;
+            background-color: rgba(0,0,0,0);
+            box-sizing: content-box;
+            height: 72px;
+            width: 72px;
+            line-height: 72px;
+            border-radius: 20px;
+            position: relative;
+            top: auto;
+            left: auto;
+            margin: 0;
+            border-radius: 20px;
+            font-size: 36px;
+            display: block;
+        }
+        .content-wrapper {
+            margin-top: 50px;
+        }
+        .content-heading {
+            font-size:25px;
+            line-height:23px;
+            padding-left:96px;
+        }
+        .content-container {
+            padding-left: 96px;
+        }
+
 </style>
 </head>
 <body>
     <header id="header" class="d-flex align-items-center">
-    <div class="container d-flex flex-column align-items-center">
-
-      <h1>Clínica Control</h1>
-      <h2>Estamos trabajando arduamente para realizar nuestro sitio y estará listo para funcionar en:</h2>
-      <div class="countdown d-flex justify-content-center" data-count="2023/12/31">
-        <div>
-          <h3>%d</h3>
-          <h4>Dias</h4>
+        <div class="container d-flex flex-column align-items-center">
+        <h1>Clínica Control</h1>
+        <h2>Estamos trabajando arduamente para realizar nuestro sitio y estará listo para funcionar en:</h2>
+        <div class="countdown d-flex justify-content-center" data-count="2023/12/31">
+            <div>
+                <h3>%d</h3>
+                <h4>Dias</h4>
+            </div>
+            <div>
+                <h3>%h</h3>
+                <h4>Horas</h4>
+            </div>
+            <div>
+                <h3>%m</h3>
+                <h4>Minutos</h4>
+            </div>
+            <div>
+                <h3>%s</h3>
+                <h4>Segundos</h4>
+            </div>
         </div>
-        <div>
-          <h3>%h</h3>
-          <h4>Horas</h4>
+        <div class="col content-wrapper">
+            <div class="heading heading-with-icon icon-left">
+                <div class="icon">
+                    <span class="icon-box-75">                        
+                        <i class="fas fa-cloud"></i>
+                    </span>
+                </div>
+                <h3 class="content-heading">Software de gestión de clínicas en la nube</h3>
+            </div>
+            <div class="fusion-clearfix"></div>
+            <div class="content-container"> 
+                <p>Software de gestión de clínicas en la nube. Accede con un navegador web desde cualquier dispositivo conectado a internet.</p>
+            </div>
         </div>
-        <div>
-          <h3>%m</h3>
-          <h4>Minutos</h4>
-        </div>
-        <div>
-          <h3>%s</h3>
-          <h4>Segundos</h4>
-        </div>
-      </div>
-
       <!-- <div class="subscribe">
         <h4>Subscribe now to get the latest updates!</h4>
         <form action="forms/notify.php" method="post" role="form" class="php-email-form">
