--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             display: block;
         }
         .content-wrapper {
-            margin-top: 50px;
+            margin-top: 25px;
         }
         .content-heading {
             font-size:25px;
@@ -124,20 +124,7 @@
                 <h4>Segundos</h4>
             </div>
         </div>
-        <div class="col content-wrapper">
-            <div class="heading heading-with-icon icon-left">
-                <div class="icon">
-                    <span class="icon-box-75">                        
-                        <i class="fas fa-cloud"></i>
-                    </span>
-                </div>
-                <h3 class="content-heading">Software de gestión de clínicas en la nube</h3>
-            </div>
-            <div class="fusion-clearfix"></div>
-            <div class="content-container"> 
-                <p>Software de gestión de clínicas en la nube. Accede con un navegador web desde cualquier dispositivo conectado a internet.</p>
-            </div>
-        </div>
+        
       <!-- <div class="subscribe">
         <h4>Subscribe now to get the latest updates!</h4>
         <form action="forms/notify.php" method="post" role="form" class="php-email-form">
@@ -161,6 +148,67 @@
 
     </div>
   </header>
+  <div class="container" style="max-width: 750px;">
+    <div class="row">
+        <div class="col-12 content-wrapper">
+            <div class="heading heading-with-icon icon-left">
+                <div class="icon">
+                    <span class="icon-box-75">                        
+                        <i class="fas fa-cloud"></i>
+                    </span>
+                </div>
+                <h3 class="content-heading">Software de gestión de clínicas en la nube</h3>
+            </div>
+            <div class="fusion-clearfix"></div>
+            <div class="content-container"> 
+                <p>Software de gestión de clínicas en la nube. Accede con un navegador web desde cualquier dispositivo conectado a internet.</p>
+            </div>
+        </div>
+        <div class="col-12 content-wrapper">
+            <div class="heading heading-with-icon icon-left">
+                <div class="icon">
+                    <span class="icon-box-75">                        
+                        <i class="fas fa-shield-alt"></i>
+                    </span>
+                </div>
+                <h3 class="content-heading">Gestión clínica segura y protegida</h3>
+            </div>
+            <div class="fusion-clearfix"></div>
+            <div class="content-container"> 
+                <p>Acceso protegido y cifrado. Tus datos siempre a salvo. Nosotros nos encargamos de las copias de seguridad.</p>
+            </div>
+        </div>
+        <div class="col-12 content-wrapper">
+            <div class="heading heading-with-icon icon-left">
+                <div class="icon">
+                    <span class="icon-box-75">                        
+                        <i class="fas fa-calendar-alt"></i>
+                    </span>
+                </div>
+                <h3 class="content-heading">Agenda de citas</h3>
+            </div>
+            <div class="fusion-clearfix"></div>
+            <div class="content-container"> 
+                <p>Control y orden de las citas de los pacientes.</p>
+            </div>
+        </div>
+        <div class="col-12 content-wrapper">
+            <div class="heading heading-with-icon icon-left">
+                <div class="icon">
+                    <span class="icon-box-75">                        
+                        <i class="fas fa-history"></i>
+                    </span>
+                </div>
+                <h3 class="content-heading">Historia Clínica del Paciente</h3>
+            </div>
+            <div class="fusion-clearfix"></div>
+            <div class="content-container"> 
+                <p>Registro del expediente clínico del paciente.</p>
+            </div>
+        </div>       
+      </div>
+  </div>
+  
     
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
