--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         #header {
             position: relative;
             width: 100%;
-            padding: 100px 0;
+            padding-top: 100px;
+            padding-bottom: 40px;
+
         }
         #header h1 {
             margin: 0 0 10px 0;
@@ -65,7 +67,7 @@
             border-style:solid;
             margin-right:20px;
             box-sizing:content-box;
-            border-radius:20px;
+            border-radius: 50%;
             position: relative;
             display: block;
             text-align: center;
@@ -78,12 +80,11 @@
             height: 72px;
             width: 72px;
             line-height: 72px;
-            border-radius: 20px;
+            border-radius: 2px;
             position: relative;
             top: auto;
             left: auto;
-            margin: 0;
-            border-radius: 20px;
+            margin: 0;            
             font-size: 36px;
             display: block;
         }
